# ireadlogs

./: .gitignore  Makefile  README.md  setup.cfg
ireadlogs/: ireadlogs.py
logstat/: config.json  logstat.py
src/ireadlogs/: __main__.py  ireadlogs.py  logline.py  parser.py  runconfig.py  stats.py
tests/: test_ireadlogs.py  test_logline.py  test_logstat.py  test_parser.py  test_runconfig.py  test_stats.py
tests/resources/: logfile.txt  logfile2.txt  logfile_hosts.json  logfile_pages.json  logfile_stats.json
