[metadata]
name = ireadlogs
version = 0.0.6
author = vas
author_email = william.gkou@gmail.com
description = Small NASA FTP logs analyzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zerogvt/logstat
project_urls =
    Bug Tracker = https://github.com/zerogvt/logstat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL2 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    main = ireadlogs:main
