[metadata]
name = ireadlogs
version = 0.0.12
author = vas
author_email = william.gkou@gmail.com
description = Small NASA FTP logs analyzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zerogvt/ireadlogs
project_urls =
    Bug Tracker = https://github.com/zerogvt/ireadlogs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ireadlogs = ireadlogs.__main__:main
